--- a/index.html
+++ b/index.html
@@ -7,57 +7,102 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header class="app-header">
-      <h1>Yomiage Web TTS（日本語）</h1>
-      <p class="subtitle">貼り付けた長文を、デバイス内TTSだけで読み上げ</p>
-    </header>
+    <div class="app-shell">
+      <header class="app-header container">
+        <h1 class="app-title">Yomiage Web TTS（日本語）</h1>
+        <p class="subtitle">貼り付けた長文を、デバイス内TTSだけで読み上げ</p>
+      </header>
 
-    <section class="controls" aria-label="再生コントロール">
-      <div class="control-row">
-        <label for="voiceSelect">音声</label>
-        <select id="voiceSelect" aria-label="日本語音声の選択"></select>
-        <span id="voiceWarning" class="warning" aria-live="polite" hidden>日本語音声が見つかりません</span>
-      </div>
+      <main class="app-main container">
+        <section class="card controls" aria-label="再生コントロール">
+          <div class="card-header">
+            <div>
+              <h2 class="card-title">再生コントロール</h2>
+              <p class="card-description">音声や速度を調整して、すぐに読み上げを開始できます。</p>
+            </div>
+          </div>
+          <div class="card-content">
+            <div class="field">
+              <label class="field-label" for="voiceSelect">音声</label>
+              <select id="voiceSelect" class="select" aria-label="日本語音声の選択"></select>
+              <p id="voiceWarning" class="warning" role="status" aria-live="polite" hidden>日本語音声が見つかりません</p>
+            </div>
 
-      <div class="control-row">
-        <label for="rate">速度 <span id="rateVal">1.00</span>x</label>
-        <input id="rate" type="range" min="0.5" max="2" step="0.05" value="1" />
-        <label for="pitch">ピッチ <span id="pitchVal">1.00</span></label>
-        <input id="pitch" type="range" min="0.5" max="2" step="0.05" value="1" />
-        <label for="volume">音量 <span id="volumeVal">1.00</span></label>
-        <input id="volume" type="range" min="0" max="1" step="0.05" value="1" />
-      </div>
+            <div class="slider-grid">
+              <div class="field">
+                <label class="field-label" for="rate">速度 <span id="rateVal" class="field-value">1.00</span>x</label>
+                <input id="rate" class="range" type="range" min="0.5" max="2" step="0.05" value="1" />
+              </div>
+              <div class="field">
+                <label class="field-label" for="pitch">ピッチ <span id="pitchVal" class="field-value">1.00</span></label>
+                <input id="pitch" class="range" type="range" min="0.5" max="2" step="0.05" value="1" />
+              </div>
+              <div class="field">
+                <label class="field-label" for="volume">音量 <span id="volumeVal" class="field-value">1.00</span></label>
+                <input id="volume" class="range" type="range" min="0" max="1" step="0.05" value="1" />
+              </div>
+            </div>
 
-      <div class="control-row buttons">
-        <button id="playPause" aria-label="再生/一時停止">▶ 再生</button>
-        <button id="stop" aria-label="停止">■ 停止</button>
-        <button id="prev" aria-label="前の文">⟵ 前</button>
-        <button id="next" aria-label="次の文">次 ⟶</button>
-        <span id="progress" class="progress" aria-live="polite">0 / 0</span>
-        <span id="eta" class="eta" aria-live="polite">残り --:--</span>
-      </div>
-    </section>
+            <div class="button-grid" role="group" aria-label="再生操作">
+              <button id="playPause" class="btn btn-primary" aria-label="再生/一時停止">▶ 再生</button>
+              <button id="stop" class="btn btn-outline" aria-label="停止">■ 停止</button>
+              <button id="prev" class="btn btn-outline" aria-label="前の文">⟵ 前</button>
+              <button id="next" class="btn btn-outline" aria-label="次の文">次 ⟶</button>
+            </div>
+          </div>
+          <div class="card-footer metrics">
+            <span id="progress" class="progress" aria-live="polite">0 / 0</span>
+            <span id="eta" class="eta" aria-live="polite">残り --:--</span>
+          </div>
+        </section>
 
-    <section class="paste" aria-label="テキスト入力">
-      <textarea id="paste" placeholder="ここにビジネス文書などの長文を貼り付けてください（保存はされません）" rows="12"></textarea>
-    </section>
+        <section class="card paste" aria-label="テキスト入力">
+          <div class="card-header">
+            <div>
+              <h2 class="card-title">テキスト入力</h2>
+              <p class="card-description">貼り付けた内容は端末内でのみ処理されます。</p>
+            </div>
+          </div>
+          <div class="card-content">
+            <textarea
+              id="paste"
+              class="textarea"
+              placeholder="ここにビジネス文書などの長文を貼り付けてください（保存はされません）"
+              rows="12"
+            ></textarea>
+          </div>
+        </section>
 
-    <section class="viewer" aria-label="読み上げ対象テキスト">
-      <h2>プレビュー（文単位）</h2>
-      <div id="viewer" class="viewer-content" tabindex="0" aria-live="off"></div>
-    </section>
+        <section class="card viewer" aria-label="読み上げ対象テキスト">
+          <div class="card-header">
+            <div>
+              <h2 class="card-title">プレビュー（文単位）</h2>
+              <p class="card-description">再生中の文が自動でハイライトされます。</p>
+            </div>
+          </div>
+          <div class="card-content">
+            <div id="viewer" class="viewer-content" tabindex="0" aria-live="off"></div>
+          </div>
+        </section>
 
-    <section class="help">
-      <details>
-        <summary>ヘルプ / 既知の制約</summary>
-        <ul>
-          <li>音声合成は端末内のみ（ネットワーク送信なし）。</li>
-          <li>iOS/Safariでは初回にユーザー操作が必要です。</li>
-          <li>速度・ピッチは次の文から反映（即時反映は設定で対応予定）。</li>
-          <li>キーボード: Space=再生/一時停止, [ / ]=前/次, +/-=速度。</li>
-        </ul>
-      </details>
-    </section>
+        <section class="card help" aria-label="ヘルプと既知の制約">
+          <div class="card-header">
+            <h2 class="card-title">ヘルプ / 既知の制約</h2>
+          </div>
+          <div class="card-content">
+            <details>
+              <summary>詳細を表示</summary>
+              <ul>
+                <li>音声合成は端末内のみ（ネットワーク送信なし）。</li>
+                <li>iOS/Safariでは初回にユーザー操作が必要です。</li>
+                <li>速度・ピッチは次の文から反映（即時反映は設定で対応予定）。</li>
+                <li>キーボード: Space=再生/一時停止, [ / ]=前/次, +/-=速度。</li>
+              </ul>
+            </details>
+          </div>
+        </section>
+      </main>
+    </div>
 
     <script type="module" src="src/app.js"></script>
   </body>
