--- a/index.html
+++ b/index.html
@@ -1,63 +1,12 @@
 <!doctype html>
-<html lang="ja">
+<html lang="ja" class="h-full">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Yomiage Web TTS</title>
-    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <header class="app-header">
-      <h1>Yomiage Web TTS（日本語）</h1>
-      <p class="subtitle">貼り付けた長文を、デバイス内TTSだけで読み上げ</p>
-    </header>
-
-    <section class="controls" aria-label="再生コントロール">
-      <div class="control-row">
-        <label for="voiceSelect">音声</label>
-        <select id="voiceSelect" aria-label="日本語音声の選択"></select>
-        <span id="voiceWarning" class="warning" aria-live="polite" hidden>日本語音声が見つかりません</span>
-      </div>
-
-      <div class="control-row sliders">
-        <label for="rate">速度 <span id="rateVal">1.00</span>x</label>
-        <input id="rate" type="range" min="0.5" max="2" step="0.05" value="1" />
-        <label for="pitch">ピッチ <span id="pitchVal">1.00</span></label>
-        <input id="pitch" type="range" min="0.5" max="2" step="0.05" value="1" />
-      </div>
-
-      <div class="control-row buttons">
-        <button id="playPause" aria-label="再生/一時停止">▶ 再生</button>
-        <button id="stop" aria-label="停止">■ 停止</button>
-        <button id="prev" aria-label="前の文">⟵ 前</button>
-        <button id="next" aria-label="次の文">次 ⟶</button>
-        <span id="progress" class="progress" aria-live="polite">0 / 0</span>
-        <span id="eta" class="eta" aria-live="polite">残り --:--</span>
-      </div>
-    </section>
-
-    <section class="paste" aria-label="テキスト入力">
-      <textarea id="paste" placeholder="ここにビジネス文書などの長文を貼り付けてください（保存はされません）" rows="12"></textarea>
-    </section>
-
-    <section class="viewer" aria-label="読み上げ対象テキスト">
-      <h2>プレビュー（文単位）</h2>
-      <div id="viewer" class="viewer-content" tabindex="0" aria-live="off"></div>
-    </section>
-
-    <section class="help">
-      <details>
-        <summary>ヘルプ / 既知の制約</summary>
-        <ul>
-          <li>音声合成は端末内のみ（ネットワーク送信なし）。</li>
-          <li>iOS/Safariでは初回にユーザー操作が必要です。</li>
-          <li>速度は再生中でも即時に反映されます（ピッチ変更は次の文から）。</li>
-          <li>キーボード: Space=再生/一時停止, [ / ]=前/次, +/-=速度。</li>
-        </ul>
-      </details>
-    </section>
-
-    <script type="module" src="src/app.js"></script>
+  <body class="h-full">
+    <div id="root" class="h-full"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
-  </html>
-
+</html>
