fix: favicon 404 を解消

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="icon"
+      href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGNgYAAAAAMAASsJTYQAAAAASUVORK5CYII="
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Yomiage Web TTS</title>
   </head>
